objects/QSR__c.object
<CustomObject>
    <fields>
        <fullName>Business_Attendee__c</fullName>
        <label>Business Attendee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSE_Assigned__c</fullName>
        <formula>Success_Plan__r.CSE_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_FY_FQ__c</fullName>
        <label>Cisco FY/FQ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q3FY19</fullName>
                </value>
                <value>
                    <fullName>Q4FY19</fullName>
                </value>
                <value>
                    <fullName>Q1FY20</fullName>
                </value>
                <value>
                    <fullName>Q2FY20</fullName>
                </value>
                <value>
                    <fullName>Q3FY20</fullName>
                </value>
                <value>
                    <fullName>Q4FY20</fullName>
                </value>
                <value>
                    <fullName>Q1FY21</fullName>
                </value>
                <value>
                    <fullName>Q2FY21</fullName>
                </value>
                <value>
                    <fullName>Q3FY21</fullName>
                </value>
                <value>
                    <fullName>Q4FY21</fullName>
                </value>
                <value>
                    <fullName>Q1FY22</fullName>
                </value>
                <value>
                    <fullName>Q2FY22</fullName>
                </value>
                <value>
                    <fullName>Q3FY22</fullName>
                </value>
                <value>
                    <fullName>Q4FY22</fullName>
                </value>
                <value>
                    <fullName>Q1FY23</fullName>
                </value>
                <value>
                    <fullName>Q2FY23</fullName>
                </value>
                <value>
                    <fullName>Q3FY23</fullName>
                </value>
                <value>
                    <fullName>Q4FY23</fullName>
                </value>
                <value>
                    <fullName>Q1FY24</fullName>
                </value>
                <value>
                    <fullName>Q2FY24</fullName>
                </value>
                <value>
                    <fullName>Q3FY24</fullName>
                </value>
                <value>
                    <fullName>Q4FY24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Attendance__c</fullName>
        <label>Executive Attendance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Attendee__c</fullName>
        <label>IT Attendee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <description>As a CSE, I'd like to have a Meeting Date for QSR data layout</description>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Format__c</fullName>
        <label>Meeting Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In person</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Notes_Key_Takeaways__c</fullName>
        <label>Meeting Notes/Key Takeaways</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Status__c</fullName>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed-Success</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Refused</fullName>
                </value>
                <value>
                    <fullName>Closed-Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Customer_Attendees__c</fullName>
        <label>Other Customer Attendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSR_Actions__c</fullName>
        <label>QSR Actions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Plan__c</fullName>
        <label>Success Plan</label>
        <referenceTo>Success_Plan__c</referenceTo>
        <relationshipLabel>Quarterly Success Reviews (QSRs)</relationshipLabel>
        <relationshipName>QSR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Update_Current_meeting_action_items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Current meeting action items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Key Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Success_Priorities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Success Priorities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_completion_of_actions_from_prev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed actions from previous meeting?</label>
        <type>Checkbox</type>
    </fields>
    <description>Used for C360 Customer Success Program</description>
    <label>QSR</label>
    <nameField>
        <label>QSR  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QSR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>QSR_Record_type</fullName>
        <active>true</active>
        <label>QSR Record type</label>
    </recordTypes>
    <validationRules>
        <fullName>PreventFYFQModification</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Cisco_FY_FQ__c)</errorConditionFormula>
        <errorMessage>Cisco FY/FQ is not editable.</errorMessage>
    </validationRules>
</CustomObject>